# c-plus-plus-specialization

./: .gitignore  README.md  c-plus-plus-white.sln
a-plus-b/: a-plus-b.vcxproj  a-plus-b.vcxproj.filters
anagrams/: anagrams.cpp  anagrams.vcxproj  anagrams.vcxproj.filters
average-temperature/: average-temperature.vcxproj  average-temperature.vcxproj.filters
binary-numbers/: binary-numbers.vcxproj  binary-numbers.vcxproj.filters
bus-stops/: bus-stops.vcxproj
bus-stops-2/: bus-stops.cpp
bus-stops-3/: bus-stops-3.vcxproj
c-plus-plus-white/: ReadMe.txt  a-plus-b.cpp  c-plus-plus-white.vcxproj  c-plus-plus-white.vcxproj.filters  stdafx.cpp
calculation-of-cost-of-goods/: ReadMe.txt  calculation-of-cost-of-goods.cpp  calculation-of-cost-of-goods.vcxproj  calculation-of-cost-of-goods.vcxproj.filters  stdafx.cpp
calculator-fractions/: calculator-fractions.vcxproj.filters
capitals-directory/: capitals-directory.cpp  capitals-directory.vcxproj.filters
division/: ReadMe.txt  division.cpp  division.vcxproj  division.vcxproj.filters  stdafx.cpp
equation/: ReadMe.txt  equation.cpp  equation.vcxproj  equation.vcxproj.filters  stdafx.cpp
even-numbers/: ReadMe.txt  even-numbers.cpp  even-numbers.vcxproj  even-numbers.vcxproj.filters  stdafx.cpp
factorial/: factorial.cpp  factorial.vcxproj  factorial.vcxproj.filters
files/: files.vcxproj
files-2/: files-2.vcxproj
initialization/: main.cpp
invertible_function/: invertible_function.cpp  invertible_function.vcxproj.filters
map-values/: map-values.vcxproj.filters
maximiser/: maximiser.vcxproj
min-string/: ReadMe.txt  min-string.cpp  min-string.vcxproj  min-string.vcxproj.filters  stdafx.cpp
monthly-tasks/: monthly-tasks.cpp  monthly-tasks.vcxproj
move-strings/: move-strings.cpp  move-strings.vcxproj
names/: Person.cpp  main.cpp
names-2/: Person.cpp  main.cpp  names-2.vcxproj
names-3/: names-3.vcxproj
palindrome/: palindrome.cpp  palindrome.vcxproj.filters
palindrome-filter/: palindrome-filter.vcxproj
precision/: precision.vcxproj  precision.vcxproj.filters
queue/: queue.cpp  queue.vcxproj
rational_eq_add_sub/: rational_eq_add_sub.cpp  rational_eq_add_sub.vcxproj
rational_exception/: rational-exception.cpp  rational_exception.vcxproj
rational_interface/: rational-interface.cpp
rational_io/: rational_io.vcxproj
rational_map/: rational_map.vcxproj
rational_mult_div/: rational_mult_div.cpp  rational_mult_div.vcxproj.filters
red/: CMakeLists.txt
red/week1/bad_macro/: CMakeLists.txt  print_values.cpp
red/week1/comparator_generator/: CMakeLists.txt  airline_ticket.h  sort_by.cpp
red/week1/deque/: CMakeLists.txt  deque.h  main.cpp  test_runner.h
red/week1/logger/: CMakeLists.txt  main.cpp
red/week1/paginator/: CMakeLists.txt  paginator.cpp
red/week1/table/: CMakeLists.txt  table.cpp
red/week1/uniq_id_macro/: CMakeLists.txt  uniq_id.cpp
red/week1/update_field/: CMakeLists.txt  update_field.cpp
red/week2/expresses/: CMakeLists.txt  slow.cpp
red/week2/learner/: CMakeLists.txt  learner.cpp  main.cpp
red/week2/sort_students/: CMakeLists.txt  sort_students.cpp  test_runner.h
red/week3/object_pool/: CMakeLists.txt  object_pool.cpp
reverse/: reverse.cpp  reverse.vcxproj  reverse.vcxproj.filters
sort-case-insensitive/: sort-case-insensitive.cpp  (+2 more)
table/: table.vcxproj  (+1 more)
yellow/: CMakeLists.txt
yellow/average-temperature-2/: CMakeLists.txt  main.cpp
yellow/base-regions/: find.cpp  main.cpp  region.h
yellow/decomposition/: CMakeLists.txt
yellow/item-reference/: CMakeLists.txt
yellow/sqr/: CMakeLists.txt  main.cpp  sqr.cpp
yellow/task-tracker/: CMakeLists.txt  TasksInfo.h  TeamTasks.cpp
yellow/test_rational/: CMakeLists.txt
yellow/week1/base-regions/: CMakeLists.txt
yellow/week1/item-reference/: getrefstrict.cpp  main.cpp
yellow/week1/task-tracker/: main.cpp
yellow/week2/blocks-weight/: CMakeLists.txt  main.cpp
yellow/week2/decomposition/: main.cpp
yellow/week2/test_equation/: CMakeLists.txt  main.cpp
yellow/week2/test_palindrome/: CMakeLists.txt  main.cpp
yellow/week2/test_person/: CMakeLists.txt  main.cpp
yellow/week2/test_rational/: main.cpp
yellow/week3/decomposition-2/: CMakeLists.txt  bus_manager.cpp  bus_manager.h  main.cpp  query.cpp  query.h  responses.cpp  responses.h
yellow/week3/phone_number/: CMakeLists.txt  phone_number.cpp  phone_number.h
yellow/week3/rectangle/: CMakeLists.txt  main.cpp  rectangle.cpp  rectangle.h
yellow/week3/sum_reverse_sort/: CMakeLists.txt  sum_reverse_sort.cpp  sum_reverse_sort.h
yellow/week4/build_expression/: CMakeLists.txt  main.cpp
yellow/week4/build_expression2/: CMakeLists.txt  main.cpp
yellow/week4/find_nearest_element/: CMakeLists.txt  FindNearestElement.cpp  main.cpp
yellow/week4/find_starts_with_char/: CMakeLists.txt  FindStartsWith.cpp  main.cpp
yellow/week4/find_starts_with_string/: CMakeLists.txt  FindStartsWith.cpp  main.cpp
yellow/week4/merge_sort/: CMakeLists.txt  MergeSort.cpp  main.cpp
yellow/week4/merge_sort2/: CMakeLists.txt  MergeSort.cpp  main.cpp
yellow/week4/permutations/: CMakeLists.txt  main.cpp
yellow/week4/person_names/: CMakeLists.txt  main.cpp  person.cpp
yellow/week4/remove_duplicates/: CMakeLists.txt  RemoveDuplicates.cpp  main.cpp
yellow/week4/set_part/: CMakeLists.txt  FindGreaterElements.cpp  main.cpp
yellow/week4/split_into_words/: CMakeLists.txt  SplitIntoWords.cpp  main.cpp
yellow/week4/stats/: CMakeLists.txt  PrintStats.cpp  PrintStats.h  gender.h  main.cpp  person.h
yellow/week4/vector_part/: CMakeLists.txt  PrintVectorPart.cpp  main.cpp
yellow/week5/figures/: CMakeLists.txt  main.cpp
yellow/week5/inheritance/: inheritance.cpp
yellow/week5/notifiers/: CMakeLists.txt  main.cpp
yellow/week5/refactoring/: CMakeLists.txt  main.cpp
yellow/week6/course_project/: CMakeLists.txt  comparison.cpp  comparison.h  condition_parser.cpp  condition_parser_test.cpp  database.cpp  database.h  date.cpp  date.h  entry.cpp  entry.h  logical_operation.cpp  logical_operation.h  main.cpp  node.cpp  node.h  test_runner.cpp  test_runner.h  token.h
(+104 files in other folders)
