cmake_minimum_required(VERSION 3.12)
project(red)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory("week1/logger" "week1/logger/cmake-build-debug")
add_subdirectory("week1/comparator_generator" "week1/comparator_generator/cmake-build-debug")
add_subdirectory("week1/update_field" "week1/update_field/cmake-build-debug")
add_subdirectory("week1/bad_macro" "week1/bad_macro/cmake-build-debug")
add_subdirectory("week1/uniq_id_macro" "week1/uniq_id_macro/cmake-build-debug")
add_subdirectory("week1/table" "week1/table/cmake-build-debug")
add_subdirectory("week1/deque" "week1/deque/cmake-build-debug")
add_subdirectory("week1/paginator" "week1/paginator/cmake-build-debug")
add_subdirectory("week2/sort_students" "week2/sort_students/cmake-build-debug")
add_subdirectory("week2/learner" "week2/learner/cmake-build-debug")
