cmake_minimum_required(VERSION 3.12)
project(yellow)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory("week1/base-regions" "week1/base-regions/cmake-build-debug")
add_subdirectory("week1/item-reference" "week1/item-reference/cmake-build-debug")
add_subdirectory("week1/sqr" "week1/sqr/cmake-build-debug")
add_subdirectory("week1/task-tracker" "week1/task-tracker/cmake-build-debug")
add_subdirectory("week2/average-temperature-2" "week2/average-temperature-2/cmake-build-debug")
add_subdirectory("week2/blocks-weight" "week2/blocks-weight/cmake-build-debug")
add_subdirectory("week2/decomposition" "week2/decomposition/cmake-build-debug")
add_subdirectory("week2/test_equation" "week2/test_equation/cmake-build-debug")
add_subdirectory("week2/test_person" "week2/test_person/cmake-build-debug")
add_subdirectory("week2/test_rational" "week2/test_rational/cmake-build-debug")
add_subdirectory("week2/test_palindrome" "week2/test_palindrome/cmake-build-debug")
add_subdirectory("week3/sum_reverse_sort" "week3/sum_reverse_sort/cmake-build-debug")
add_subdirectory("week3/phone_number" "week3/phone_number/cmake-build-debug")
add_subdirectory("week3/rectangle" "week3/rectangle/cmake-build-debug")
add_subdirectory("week3/decomposition-2" "week3/decomposition-2/cmake-build-debug")
add_subdirectory("week4/vector_part" "week4/vector_part/cmake-build-debug")
