cmake_minimum_required(VERSION 3.12)
project(yellow)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory("week1/base-regions" "week1/base-regions/cmake-build-debug")
add_subdirectory("week1/item-reference" "week1/item-reference/cmake-build-debug")
add_subdirectory("week1/sqr" "week1/sqr/cmake-build-debug")
add_subdirectory("week1/task-tracker" "week1/task-tracker/cmake-build-debug")
add_subdirectory("week2/average-temperature-2" "week2/average-temperature-2/cmake-build-debug")
add_subdirectory("week2/blocks-weight" "week2/blocks-weight/cmake-build-debug")
add_subdirectory("week2/decomposition" "week2/decomposition/cmake-build-debug")
add_subdirectory("week2/test_equation" "week2/test_equation/cmake-build-debug")
add_subdirectory("week2/test_person" "week2/test_person/cmake-build-debug")
add_subdirectory("week2/test_rational" "week2/test_rational/cmake-build-debug")
add_subdirectory("week2/test_palindrome" "week2/test_palindrome/cmake-build-debug")
add_subdirectory("week3/sum_reverse_sort" "week3/sum_reverse_sort/cmake-build-debug")
add_subdirectory("week3/phone_number" "week3/phone_number/cmake-build-debug")
add_subdirectory("week3/rectangle" "week3/rectangle/cmake-build-debug")
add_subdirectory("week3/decomposition-2" "week3/decomposition-2/cmake-build-debug")
add_subdirectory("week4/vector_part" "week4/vector_part/cmake-build-debug")
add_subdirectory("week4/set_part" "week4/set_part/cmake-build-debug")
add_subdirectory("week4/split_into_words" "week4/split_into_words/cmake-build-debug")
add_subdirectory("week4/remove_duplicates" "week4/remove_duplicates/cmake-build-debug")
add_subdirectory("week4/permutations" "week4/permutations/cmake-build-debug")
add_subdirectory("week4/stats" "week4/stats/cmake-build-debug")
add_subdirectory("week4/merge_sort" "week4/merge_sort/cmake-build-debug")
add_subdirectory("week4/merge_sort2" "week4/merge_sort2/cmake-build-debug")
add_subdirectory("week4/find_nearest_element" "week4/find_nearest_element/cmake-build-debug")
add_subdirectory("week4/person_names" "week4/person_names/cmake-build-debug")
add_subdirectory("week4/find_starts_with_char" "week4/find_starts_with_char/cmake-build-debug")
add_subdirectory("week4/find_starts_with_string" "week4/find_starts_with_string/cmake-build-debug")
add_subdirectory("week5/notifiers" "week5/notifiers/cmake-build-debug")
add_subdirectory("week5/figures" "week5/figures/cmake-build-debug")
add_subdirectory("week5/refactoring" "week5/refactoring/cmake-build-debug")
